--- a/01- PortfolioWebsite/css/style.css
+++ b/01- PortfolioWebsite/css/style.css
@@ -1,6 +1,9 @@
 /* import fonts from fonts.css file */
 @import url(./fonts.css);
 
+/* css variables */
+@import url(./partials/_variables.css);
+
 /* start navigation */
 .header_area .main-menu .navbar .navbar-brand{
     padding: 0 2rem 0 5rem;
@@ -11,14 +14,25 @@
 }
 
 .header_area .main-menu .nav-item .nav-link {
-    font-family: "Roboto", cursive;
+    font: normal 500 15px/2px var(--roboto);
     text-transform: uppercase;
-    font-weight: 500;
     padding: 1.7rem;
-    color: black;
+    color: var(--title-color);
 }
 
+.header_area .main-menu .navbar-nav .nav-item .active {
+    background: var(--gradient-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
 
+.header_area .main-menu .navbar-nav .nav-item a:hover {
+    background: var(--gradient-color);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+    background-clip: text;
+}
 
 
 
