--- a/02-OnlineStoreE-commerce/css/style.css
+++ b/02-OnlineStoreE-commerce/css/style.css
@@ -71,6 +71,7 @@ header .site-title {
 }
 
 /* Slider one */
+
 .site-slider {
     position: relative;
 }
@@ -129,4 +130,38 @@ header .site-title {
 .slick-dots li.slick-active button {
     transform: scale(1.3);
     box-shadow: 0px 3px 5px 1px rgb(150, 145, 145);
+}
+
+/* SliderTwo */
+
+.second-slider-img {
+    max-height: 20rem;
+}
+
+.site-slider-two {
+    position: relative;
+    height: 30%;
+}
+
+.site-slider-two .product {
+    height: 25rem;
+    position: relative;
+    overflow: hidden;
+}
+
+.site-slider-two .product img {
+    width: 90%;
+    margin: auto;
+}
+
+.site-btn.btn-span {
+    padding: 0.8rem 1.9rem;
+    border-radius: 4rem;
+    border: 1px solid var(--border);
+    background-color: white;
+    color: var(--light-gray);
+}
+
+.slider-two .slicks-track .product:hover span {
+    background-color: var(--primary-color);
 }
